--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" href="css/all.css">
+	<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"> 
+	<title>Gourmet Race!</title>
 </head>
 <body>
+	<header>
+		<nav name="top" class="navbar navbar-expand-md navbar-light bg-light">
+			<a class="navbar-header d-none d-sm-none d-md-flex" href="index.html">
+				<div id="logo" alt="Logo image"></div>
+			</a>
+			<a class="navbar-brand float-left" href="index.html"><h1>Gourmet Race!</h1></a>
+		  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		    	<span class="navbar-toggler-icon"></span>
+			</button>
+		  	<div class="collapse navbar-collapse" id="navbarNav">
+		    	<ul id="navbarOptions" class="navbar-nav ml-auto">
+		      		<li class="nav-item active">
+		        		<a class="nav-link d-block d-sm-block d-md-none" href="#"><i id="glyph" class="fas fa-home"></i><br class="d-none d-sm-none d-md-block">Home</a>
+		      		</li>
+		      		<li id="navLink" class="nav-item">
+		        		<a class="nav-link" href="#"><i id="glyph" class="fas fa-utensils"></i><br class="d-none d-sm-none d-md-block">Menu</a>
+		      		</li>
+		      		<li id="navLink" class="nav-item">
+		        		<a class="nav-link" href="#"><i id="glyph" class="fas fa-question"></i><br class="d-none d-sm-none d-md-block">Help</a>
+		      		</li>
+		    	</ul>
+		  	</div>
+		</nav>
+	</header>
 
+	<div id="mainContent" class="container-fluid">
+		<h2 id="menu" class="text-center">Our Menu</h2>
+		<div id="divMenu" class="row">
+			<div class="col-lg-4 col-md-6 col-sm-12 col-12 ml-auto mr-auto">
+				<div id="menuBox">
+					<h3>Chicken</h3>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam non, numquam voluptate culpa reiciendis vero cumque vel, eos, dolorem laboriosam ipsam quo. Delectus, ullam. Explicabo blanditiis dicta enim necessitatibus consequuntur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi error, itaque quisquam, mollitia reprehenderit consequuntur porro necessitatibus aspernatur? Dicta nam modi dignissimos, similique asperiores recusandae quidem libero unde quam doloremque?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste aliquam soluta illo cupiditate atque facilis unde architecto distinctio ea molestias hic aut, dolorem, saepe possimus porro, assumenda placeat quis aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam non, numquam voluptate culpa reiciendis vero cumque vel, eos, dolorem laboriosam ipsam quo. Delectus, ullam. Explicabo blanditiis dicta enim necessitatibus consequuntur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi error, itaque quisquam, mollitia reprehenderit consequuntur porro necessitatibus aspernatur? Dicta nam modi dignissimos, similique asperiores recusandae quidem libero unde quam doloremque?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste aliquam soluta illo cupiditate atque facilis unde architecto distinctio ea molestias hic aut, dolorem, saepe possimus porro, assumenda placeat quis aperiam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam non, numquam voluptate culpa reiciendis vero cumque vel, eos, dolorem laboriosam ipsam quo. Delectus, ullam. Explicabo blanditiis dicta enim necessitatibus consequuntur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi error, itaque quisquam, mollitia reprehenderit consequuntur porro necessitatibus aspernatur? Dicta nam modi dignissimos, similique asperiores recusandae quidem libero unde quam doloremque?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste aliquam soluta illo cupiditate atque facilis unde architecto distinctio ea molestias hic aut, dolorem, saepe possimus porro, assumenda placeat quis aperiam! 
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-12 col-12 ml-auto mr-auto">
+				<div id="menuBox">
+					<h3>Beef</h3>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex impedit, officiis, in, laudantium quaerat quas quae repudiandae distinctio harum totam aperiam voluptatibus obcaecati iste inventore, placeat sint culpa! Deserunt, explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, esse! Nobis quod quo corporis ipsam error. Libero doloremque inventore nobis tempore dolores, nisi optio velit facere, aut odio explicabo quibusdam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum vitae eveniet culpa, perferendis odit fugiat expedita asperiores quasi neque. Accusantium voluptas optio animi laboriosam quidem explicabo beatae sequi impedit deserunt.
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-12 col-sm-12 col-12 ml-auto mr-auto">
+				<div id="menuBox">
+					<h3>Sushi</h3>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, distinctio magnam adipisci quibusdam fugit error omnis, tempore nam dolore repudiandae, magni beatae modi unde eum in. Suscipit voluptatem, quidem officia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum blanditiis aliquid amet repudiandae quasi in laudantium voluptates, maxime, labore accusamus tempora voluptatum culpa eaque non similique obcaecati dignissimos consectetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur labore hic eos sapiente, aliquid sint facere ipsa officia? Id at ratione rerum voluptatem tenetur nihil, eum illum odit animi!<a href="#top">hahahahahahahah</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
