Fixed compatibility with Chrome

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"> 
@@ -30,6 +30,15 @@
 		      		</li>
 		      		<li id="navLink" class="nav-item">
 		        		<a class="nav-link" href="#"><i id="glyph" class="fas fa-question"></i><br class="d-none d-sm-none d-md-block">Help</a>
+		      		</li>
+		      		<li class="nav-item active">
+		        		<a class="nav-link d-block d-sm-block d-md-none" href="#">Chicken</a>
+		      		</li>
+		      		<li class="nav-item active">
+		        		<a class="nav-link d-block d-sm-block d-md-none" href="#">Beef</a>
+		      		</li>
+		      		<li class="nav-item active">
+		        		<a class="nav-link d-block d-sm-block d-md-none" href="#">Sushi</a>
 		      		</li>
 		    	</ul>
 		  	</div>
